server/src/analysis/references/snapshots/janet_zed_server__analysis__references__tests__core_binding.snap
---
source: server/src/analysis/references/tests.rs
expression: "/ws/src/report.janet: (map"
---
----- SYMBOL
-- /ws/src/report.janet
(import ./shapes)
(defn total [xs] (map shapes/area xs))
                  ▔▔▔
(defn f [shape] shape)


----- TARGET
Core { name: "map" }

----- REFERENCES


----- DECLARATION
none
