server/src/analysis/references/snapshots/janet_zed_server__analysis__references__tests__library_macro_definition_through_an_import.snap
---
source: server/src/analysis/references/tests.rs
expression: "show_references(&workspace, \"/ws/admin.janet\", \"model/Delivery\")"
---
----- SYMBOL
-- /ws/admin.janet
(import ./model)
(defresource deliveries model/Delivery)
                              ▔▔▔▔▔▔▔▔


----- TARGET
Module { file: "/ws/model.janet", name: "Delivery" }

----- REFERENCES
-- /ws/admin.janet
(import ./model)
(defresource deliveries model/Delivery)
                              ▔▔▔▔▔▔▔▔

-- /ws/model.janet
(import void/db :as db)
(db/defentity Delivery {:id :int})
              ▔▔▔▔▔▔▔▔


----- DECLARATION
-- /ws/model.janet
(import void/db :as db)
(db/defentity Delivery {:id :int})
              ▔▔▔▔▔▔▔▔
